add skills styles

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dmitry-nm22.github.io/MyPortfolio/",
+  "homepage": "https://dmitry-nm22.github.io/MyPortfolio",
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
